improved dark mode icons, fixed date icon not inverting when in dark mode

--- a/style/material.less
+++ b/style/material.less
@@ -17,7 +17,8 @@
 .backdrop-blur { backdrop-filter: blur(60px); }
 
 .displaymode-darkmode .icon-mono.display-mode-dynamic-icon {
-	filter: contrast(0) brightness(100%);
+	filter: contrast(0) brightness(100%) !important;
+	filter: invert(1) !important;
 }
 
 .material {
